[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fuzztools"
version = "0.0.1"
description = "Fuzzy Matching CLI Tools (fuzzprocess and fuzzpost)"
authors = [
    { name = "Leo Liu", email = "leo.liu@uts.edu.au" },
]
dependencies = [
    'polars',
    'tqdm',
    'faiss-cpu',
    'loguru',
]
readme = "README.md"

[project.scripts]
fuzzprocess = "fuzztools.fuzzprocess:main"
fuzzpost = "fuzztools.fuzzpost:main"
embed = "fuzztools.embed:main"

[tool.setuptools]
# Explicitly list the top-level package found in the 'src' directory
packages = ["fuzztools"]

[tool.setuptools.package-dir]
# Map the project root to the 'src' directory for package discovery
"" = "src"

# The '[tool.setuptools.packages.find]' section is no longer needed
# because we are explicitly listing the packages.
# [tool.setuptools.packages.find]
# where = ["src"]
